crates/ars-components/src/utility/heading/snapshots/ars_components__utility__heading__tests__heading_root_native_level_one.snap
---
source: crates/ars-components/src/utility/heading.rs
expression: snapshot_attrs(&api.root_attrs(true))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "heading",
            ),
        ),
        (
            Id,
            String(
                "heading-native",
            ),
        ),
    ],
    styles: [],
}
